# Multi-agent-research-system

./: Dockerfile  README.md  agents.py  app.py  app1.py  app_v2.py  pipeline.py  pyproject.toml  requirements.txt  start.sh  tools.py  ui.py
